--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,8 +8,7 @@ environment:
 
 init:
   - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%"
-  - "cd %PYTHON%"
-  - "pip.exe install pytest"
+  - "%PYTHON%\pip.exe install pytest"
 
 test_script:
-  - "pytest.py"
+  - "%PYTHON%\pytest.py"
