--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,8 @@ environment:
 
 init:
   - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%"
-  - "%PYTHON%\pip.exe install pytest"
+  - "ECHO %PYTHON%\pip.exe install pytest"
+
 
 test_script:
-  - "%PYTHON%\pytest.py"
+  - "ECHO %PYTHON%\pytest.py"
